# chunk-api

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  LICENSE.md  README.md  config.py  docker-compose.yml  main.py  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
api/: Dockerfile  database.py  docker-compose.yml  main.py  pyproject.toml
api/models/: modpack.py
api/routers/: __init__.py  auth.py  modpacks.py  search.py  upload.py  versions.py
api/tests/: conftest.py  test_modpacks.py
cmd/chunk/: main.go
docs/: API_REFERENCE.md  CLI_USAGE.md  chunk-json-spec.md
internal/config/: chunk.go  config.go
internal/converter/: configs.go  engine.go  loader.go  mods.go  scripts.go
internal/java/: installer.go
internal/preserve/: differ.go  preserver.go  upgrade.go
internal/sources/: github.go  manager_test.go  types_test.go
internal/telemetry/: collector.go
internal/ui/: progress.go
internal/validation/: files.go  smoke.go
middleware/: ratelimit.py
models/: __init__.py
prisma/: schema.prisma
routers/: projects.py  versions.py
src/: config.ts  index.ts  prisma.ts
src/plugins/: index.ts
src/routes/: advancedSearch.routes.ts  auth.routes.ts  index.ts  modpack.routes.ts  oauth.routes.ts  (+6 more)
tests/: advancedSearch.test.ts  auth.test.ts  helper.ts  license.test.ts  licenseFilter.test.ts  oauth.test.ts  pat.test.ts  projectType.test.ts  search.test.ts  tag.test.ts  test_api.py  test_auth.py  test_models.py  test_projects.py
(+23 files in other folders)
